--- a/src/css/artwork.css
+++ b/src/css/artwork.css
@@ -7,7 +7,7 @@
   transition: opacity 200ms ease;
 }
 
-.page-id-12 .wp-block-cover:hover .wp-block-cover__background {
+.page-id-12 .wp-block-cover::hover .wp-block-cover__background {
   opacity: 0.5;
 }
 
@@ -32,6 +32,10 @@
 }
 
 @media (max-width: 782px) {
+  .page-id-12 .wp-block-cover .wp-block-cover__background {
+    opacity: 0.4;
+  }
+
   .page-id-12 .wp-block-cover .wp-block-cover__inner-container a {
     display: flex;
   }
