feat: remove artwork mobile covers links text decoration

--- a/src/css/artwork.css
+++ b/src/css/artwork.css
@@ -38,9 +38,10 @@
 
   .page-id-12 .wp-block-cover .wp-block-cover__inner-container a {
     display: flex;
+    text-decoration: none;
   }
 }
 
-.page-id-12 .wp-block-cover:hover .wp-block-cover__inner-container a {
+.page-id-12 .wp-block-cover::hover .wp-block-cover__inner-container a {
   display: flex;
 }
