feat: work breadcrumb

--- a/templates/single-work.html
+++ b/templates/single-work.html
@@ -70,6 +70,8 @@
             <!-- /wp:paragraph -->
           </div>
           <!-- /wp:wpct-block/custom-fields -->
+
+          <!-- wp:pattern {"slug":"oriol-mora/artwork-breadcrumb"} /-->
         </div>
         <!-- /wp:column -->
       </div>
