feat: add localized templates

--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -6,7 +6,7 @@
   margin-right: calc(
     calc(100vw - 100%) * -1 + var(--wp--preset--spacing--50)
   ) !important;
-  max-width: undet;
+  max-width: unset;
 }
 
 .wpct-block-slider-loop .wpct-block-slider-arrows .slick-arrow {
@@ -16,24 +16,31 @@
   transform: translateY(-30px);
   padding: 0.5rem;
   background-color: var(--wp--preset--color--base);
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 2.2rem;
+  width: 2.2rem;
   filter: drop-shadow(4px 4px 3px #0003);
 }
 
+@media (max-width: 782px) {
+  .wpct-block-slider-loop .wpct-block-slider-arrows {
+    display: none;
+  }
+}
+
 .wpct-block-slider-loop .wpct-block-slider-arrows .slick-arrow.slick-prev {
-  left: var(--wp--preset--spacing--50);
-  transform: translateY(-2.5rem) rotate(180deg);
+  left: var(--wp--preset--spacing--40);
+  transform: translateY(-2.2rem) rotate(180deg);
 }
 
 .wpct-block-slider-loop .wpct-block-slider-arrows .slick-arrow.slick-next {
-  right: var(--wp--preset--spacing--50);
+  right: var(--wp--preset--spacing--40);
 }
 
 .wpct-block-slider .wpct-block-slider-arrows .slick-arrow::after {
   position: static;
-  width: calc(100% - 0.5rem);
-  height: calc(100% - 0.5rem);
+  width: calc(100% - 0.4rem);
+  height: calc(100% - 0.4rem);
   border-right: 4px solid var(--wp--preset--color--contrast);
   border-top: 4px solid var(--wp--preset--color--contrast);
+  transform: translateX(2px) rotate(45deg);
 }
