--- a/templates/page-en.html
+++ b/templates/page-en.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
 <div class="wp-block-group">
-  <!-- wp:template-part {"slug":"header-es","theme":"oriol-mora"} /-->
+  <!-- wp:template-part {"slug":"header-en","theme":"oriol-mora"} /-->
 
   <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
   <main class="wp-block-group">
