--- a/templates/page-es.html
+++ b/templates/page-es.html
@@ -1,9 +1,49 @@
-<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
-<div class="wp-block-group">
+<!-- wp:group {"className":"!mt-7 lg:mt-0","align":"full","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left","verticalAlignment":"top"}} -->
+<div class="wp-block-group !mt-7 lg:mt-0 alignfull">
   <!-- wp:template-part {"slug":"header-es","theme":"oriol-mora"} /-->
 
-  <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
-  <main class="wp-block-group">
+  <!-- wp:group {"className":"!hidden lg:!block","style":{"spacing":{"padding":{"right":"0","left":"var:preset|spacing|80"},"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+  <div
+    class="wp-block-group !hidden lg:!block"
+    style="padding-right: 0; padding-left: var(--wp--preset--spacing--80)"
+  >
+    <!-- wp:group {"style":{"spacing":{"padding":{"left":"210px","right":"0"},"blockGap":"0"}},"layout":{"type":"default"}} -->
+    <div
+      class="wp-block-group"
+      style="padding-right: 0; padding-left: 210px"
+    ></div>
+    <!-- /wp:group -->
+  </div>
+  <!-- /wp:group -->
+
+  <!-- wp:group {"tagName":"main","style":{"spacing":{"blockGap":"0","margin":{"top":"0","bottom":"0"},"padding":{"top":"0","bottom":"0","left":"0","right":"0"}},"layout":{"selfStretch":"fill","flexSize":null}},"layout":{"type":"constrained"}} -->
+  <main
+    class="wp-block-group"
+    style="
+      margin-top: 0;
+      margin-bottom: 0;
+      padding-top: 0;
+      padding-right: 0;
+      padding-bottom: 0;
+      padding-left: 0;
+    "
+  >
+    <!-- wp:spacer {"className":"!hidden lg:!block"} -->
+    <div
+      style="height: 100px"
+      aria-hidden="true"
+      class="wp-block-spacer !hidden lg:!block"
+    ></div>
+    <!-- /wp:spacer -->
+
+    <!-- wp:spacer {"className":"lg:!hidden"} -->
+    <div
+      style="height: 75px"
+      aria-hidden="true"
+      class="wp-block-spacer lg:!hidden"
+    ></div>
+    <!-- /wp:spacer -->
+
     <!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
   </main>
   <!-- /wp:group -->
