--- a/templates/single-es.html
+++ b/templates/single-es.html
@@ -41,23 +41,27 @@
         padding-left: var(--wp--preset--spacing--50);
       "
     >
-      <!-- wp:columns {"align":"wide"} -->
-      <div class="wp-block-columns alignwide">
-        <!-- wp:column {"width":"70%"} -->
-        <div class="wp-block-column" style="flex-basis: 70%">
-          <!-- wp:group {"layout":{"type":"constrained"}} -->
-          <div class="wp-block-group"><!-- wp:post-featured-image /--></div>
-          <!-- /wp:group -->
-        </div>
-        <!-- /wp:column -->
-
-        <!-- wp:column {"width":"30%"} -->
-        <div class="wp-block-column" style="flex-basis: 30%">
-          <!-- wp:post-title /-->
-        </div>
-        <!-- /wp:column -->
+      <!-- wp:post-title {"level":1} /-->
+      <!-- wp:post-featured-image {"aspectRatio":"3/2"} /-->
+      <!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
+      <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60"}}},"layout":{"type":"constrained"}} -->
+      <div
+        class="wp-block-group"
+        style="
+          padding-top: var(--wp--preset--spacing--60);
+          padding-bottom: var(--wp--preset--spacing--60);
+        "
+      >
+        <!-- wp:post-terms {"term":"post_tag","separator":"  ","className":"is-style-post-terms-1"} /-->
       </div>
-      <!-- /wp:columns -->
+      <!-- /wp:group -->
+
+      <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+      <div class="wp-block-group">
+        <!-- wp:post-navigation-link {"type":"previous"} /-->
+        <!-- wp:post-navigation-link /-->
+      </div>
+      <!-- /wp:group -->
     </div>
     <!-- /wp:group -->
   </main>
