--- a/templates/single-en.html
+++ b/templates/single-en.html
@@ -42,8 +42,19 @@
       "
     >
       <!-- wp:post-title {"level":1} /-->
-      <!-- wp:post-featured-image {"aspectRatio":"3/2"} /-->
+
+      <!-- wp:post-featured-image {"aspectRatio":"auto"} /-->
+
+      <!-- wp:spacer {"height":"1rem"} -->
+      <div
+        style="height: 1rem"
+        aria-hidden="true"
+        class="wp-block-spacer"
+      ></div>
+      <!-- /wp:spacer -->
+
       <!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
+
       <!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|60","bottom":"var:preset|spacing|60"}}},"layout":{"type":"constrained"}} -->
       <div
         class="wp-block-group"
