--- a/src/css/home.css
+++ b/src/css/home.css
@@ -17,10 +17,17 @@
 .home h1.wp-block-heading.has-xx-large-font-size {
   font-size: 5rem !important;
   line-height: 1;
+  filter: drop-shadow(0px 0px 6px #000a);
 }
 
 .home h1.wp-block-heading.has-xx-large-font-size a {
   text-decoration: none;
+  border-bottom: 2px solid transparent;
+  transition: border-color 300ms ease;
+}
+
+.home h1.wp-block-heading.has-xx-large-font-size a:hover {
+  border-color: white;
 }
 
 .home h1.wp-block-heading.has-xx-large-font-size a:focus {
