feat: minnor ui changes before release

--- a/templates/single-work.html
+++ b/templates/single-work.html
@@ -55,12 +55,12 @@
         <div class="wp-block-column" style="flex-basis: 10%">
           <!-- wp:wpct-block/custom-fields -->
           <div class="wp-block-wpct-block-custom-fields">
-            <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10"}},"layout":{"type":"flex","flexWrap":"wrap","verticalAlignment":"bottom"}} -->
+            <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10"}},"layout":{"type":"default"}} -->
             <div class="wp-block-group">
               <!-- wp:post-title {"fontSize":"large"} /-->
 
               <!-- wp:paragraph -->
-              <p>,&nbsp;{{year}}.</p>
+              <p>{{year}}</p>
               <!-- /wp:paragraph -->
             </div>
             <!-- /wp:group -->
