--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -19,6 +19,8 @@
   height: 2.2rem;
   width: 2.2rem;
   filter: drop-shadow(4px 4px 3px #0003);
+  font-size: 0px;
+  color: transparent;
 }
 
 @media (max-width: 782px) {
