--- a/templates/page-en_us.html
+++ b/templates/page-en_us.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"className":"!mt-7 lg:mt-0","align":"full","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left","verticalAlignment":"top"}} -->
 <div class="wp-block-group !mt-7 lg:mt-0 alignfull">
-  <!-- wp:template-part {"slug":"header-es","theme":"oriol-mora"} /-->
+  <!-- wp:template-part {"slug":"header-en_us","theme":"oriol-mora"} /-->
 
   <!-- wp:group {"className":"!hidden lg:!block","style":{"spacing":{"padding":{"right":"0","left":"var:preset|spacing|80"},"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
   <div
