--- a/templates/single-en_us.html
+++ b/templates/single-en_us.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"align":"full","className":"!mt-7 lg:mt-0","style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"left","verticalAlignment":"top"}} -->
 <div class="wp-block-group alignfull !mt-7 lg:mt-0">
-  <!-- wp:template-part {"slug":"header-ca","theme":"oriol-mora"} /-->
+  <!-- wp:template-part {"slug":"header-en_us","theme":"oriol-mora"} /-->
 
   <!-- wp:group {"className":"!hidden lg:!block","style":{"spacing":{"padding":{"right":"0","left":"var:preset|spacing|80"},"blockGap":"0"}},"layout":{"type":"flex","flexWrap":"nowrap"}} -->
   <div
